--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -2786,7 +2786,7 @@ hr {
 }
 
 .slider-area {
-  background-image: url(../img/hero/homeHero_1.jpg);
+  background-image: url(../img/hero/KHA_2603_ngang.png);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
